Beneficiary signs transaction

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ h2 {
 }
 
 .css-11tvqdk {
-    position: static;
+    /* position: static; */
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     -webkit-justify-content: center;
